vlib/v/parser/tests/typeof_typename_err.vv
fn f[T]() { println("type ${typeof(T)}") }
f[int]()
f[string]()

		  
